--- a/reSOUND/Views/Base.lproj/Main.storyboard
+++ b/reSOUND/Views/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="SeY-sq-78g">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="pZc-8o-UAh">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -11,7 +11,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Users View Controller-->
+        <!--users-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="UsersViewController" customModule="reSOUND" customModuleProvider="target" sceneMemberID="viewController">
@@ -20,7 +20,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="822-ho-CEM">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="oAx-Gc-EUf">
                                     <size key="itemSize" width="167" height="186"/>
@@ -108,6 +108,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="users" id="4AQ-SO-M9y"/>
                     <navigationItem key="navigationItem" id="EI6-wf-uqR"/>
                     <connections>
                         <outlet property="collectionView" destination="822-ho-CEM" id="a9u-Lg-cK2"/>
@@ -157,6 +158,17 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vSg-60-wlP">
+                                <rect key="frame" x="139" y="485" width="96" height="42"/>
+                                <color key="backgroundColor" red="0.0" green="0.58980089430000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                <state key="normal" title="connect">
+                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="connectButtonPressed:" destination="jJ0-IW-2xk" eventType="touchUpInside" id="jE6-H0-fUf"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -173,13 +185,17 @@
                             <constraint firstItem="trf-yh-gz0" firstAttribute="leading" secondItem="Rel-gA-1OQ" secondAttribute="leading" constant="87" id="adP-tz-gGg"/>
                             <constraint firstItem="cR7-Cv-ZKl" firstAttribute="top" secondItem="QRs-3N-JNH" secondAttribute="bottom" constant="8" id="eNv-NX-mJV"/>
                             <constraint firstItem="Aq2-Lg-jdM" firstAttribute="leading" secondItem="Rel-gA-1OQ" secondAttribute="leading" constant="10" id="fIs-wA-Ifb"/>
+                            <constraint firstItem="vSg-60-wlP" firstAttribute="top" secondItem="V95-Xs-iAs" secondAttribute="bottom" constant="8" id="fwE-ns-Al1"/>
                             <constraint firstItem="V95-Xs-iAs" firstAttribute="top" secondItem="Aq2-Lg-jdM" secondAttribute="bottom" constant="8" id="kDI-Rh-ChG"/>
+                            <constraint firstItem="vSg-60-wlP" firstAttribute="leading" secondItem="Rel-gA-1OQ" secondAttribute="leading" constant="139" id="mN1-5W-uZU"/>
                             <constraint firstAttribute="bottom" secondItem="trf-yh-gz0" secondAttribute="bottom" constant="401" id="plU-zk-xdB"/>
+                            <constraint firstItem="Rel-gA-1OQ" firstAttribute="trailing" secondItem="vSg-60-wlP" secondAttribute="trailing" constant="140" id="u5g-j4-BZc"/>
                             <constraint firstItem="Rel-gA-1OQ" firstAttribute="trailing" secondItem="trf-yh-gz0" secondAttribute="trailing" constant="88" id="vBX-74-iaj"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Rel-gA-1OQ"/>
                     </view>
                     <connections>
+                        <outlet property="connectButton" destination="vSg-60-wlP" id="yRo-mB-g3r"/>
                         <outlet property="detailCityLabel" destination="cR7-Cv-ZKl" id="Xcr-uK-Cc7"/>
                         <outlet property="detailNameLabel" destination="QRs-3N-JNH" id="wiQ-rU-wS6"/>
                         <outlet property="detailProvinceLabel" destination="Aq2-Lg-jdM" id="RZN-2O-21N"/>
@@ -189,12 +205,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Eat-bH-dr4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1751.2" y="31.934032983508249"/>
+            <point key="canvasLocation" x="1754" y="32"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Item-->
         <scene sceneID="CRe-zF-pyK">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="SeY-sq-78g" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="RVT-6n-cUF"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="nzH-hr-tp1">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -208,6 +225,92 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NoR-fH-w7H" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="37.600000000000001" y="31.934032983508249"/>
+        </scene>
+        <!--profile-->
+        <scene sceneID="4Gj-5g-OIo">
+            <objects>
+                <viewController id="lOk-34-fsC" customClass="ProfileViewController" customModule="reSOUND" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="d5b-UO-nN2">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cJV-ke-SZV">
+                                <rect key="frame" x="87" y="66" width="200" height="200"/>
+                                <color key="backgroundColor" red="0.99953407049999998" green="0.98835557699999999" blue="0.47265523669999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fl0-Nj-qZo">
+                                <rect key="frame" x="10" y="309" width="355" height="48"/>
+                                <color key="backgroundColor" red="1" green="0.57810515169999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="province" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6mB-2O-VS2">
+                                <rect key="frame" x="10" y="405" width="355" height="32"/>
+                                <color key="backgroundColor" red="0.46202266219999999" green="0.83828371759999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="skills" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WBM-ET-oi4">
+                                <rect key="frame" x="10" y="445" width="355" height="32"/>
+                                <color key="backgroundColor" red="0.79410063099999995" green="0.63050212120000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="city" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a2w-e3-7AK">
+                                <rect key="frame" x="10" y="365" width="355" height="32"/>
+                                <color key="backgroundColor" red="0.45085787770000002" green="0.98829740290000001" blue="0.83763033149999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="cJV-ke-SZV" secondAttribute="bottom" constant="401" id="4mS-ML-tkG"/>
+                            <constraint firstItem="WBM-ET-oi4" firstAttribute="leading" secondItem="PAd-yO-PDl" secondAttribute="leading" constant="10" id="7SD-58-vyg"/>
+                            <constraint firstItem="cJV-ke-SZV" firstAttribute="top" secondItem="PAd-yO-PDl" secondAttribute="top" constant="46" id="FyM-Yz-nR3"/>
+                            <constraint firstAttribute="trailing" secondItem="fl0-Nj-qZo" secondAttribute="trailing" constant="10" id="MzH-8d-TLA"/>
+                            <constraint firstItem="a2w-e3-7AK" firstAttribute="leading" secondItem="PAd-yO-PDl" secondAttribute="leading" constant="10" id="QG5-dP-b6Q"/>
+                            <constraint firstItem="fl0-Nj-qZo" firstAttribute="top" secondItem="cJV-ke-SZV" secondAttribute="bottom" constant="43" id="U4M-3z-G0f"/>
+                            <constraint firstItem="WBM-ET-oi4" firstAttribute="top" secondItem="6mB-2O-VS2" secondAttribute="bottom" constant="8" id="ZeG-Z2-mmR"/>
+                            <constraint firstItem="PAd-yO-PDl" firstAttribute="trailing" secondItem="6mB-2O-VS2" secondAttribute="trailing" constant="10" id="bBi-z2-9Co"/>
+                            <constraint firstItem="a2w-e3-7AK" firstAttribute="top" secondItem="fl0-Nj-qZo" secondAttribute="bottom" constant="8" id="cqF-Tl-ifS"/>
+                            <constraint firstItem="6mB-2O-VS2" firstAttribute="top" secondItem="a2w-e3-7AK" secondAttribute="bottom" constant="8" id="fpm-Df-XZG"/>
+                            <constraint firstItem="PAd-yO-PDl" firstAttribute="trailing" secondItem="cJV-ke-SZV" secondAttribute="trailing" constant="88" id="jrh-l3-XBc"/>
+                            <constraint firstItem="fl0-Nj-qZo" firstAttribute="leading" secondItem="PAd-yO-PDl" secondAttribute="leading" constant="10" id="jt5-ao-Vge"/>
+                            <constraint firstItem="PAd-yO-PDl" firstAttribute="trailing" secondItem="WBM-ET-oi4" secondAttribute="trailing" constant="10" id="opJ-o6-g2p"/>
+                            <constraint firstItem="cJV-ke-SZV" firstAttribute="leading" secondItem="PAd-yO-PDl" secondAttribute="leading" constant="87" id="rnm-L1-5Lk"/>
+                            <constraint firstItem="a2w-e3-7AK" firstAttribute="centerX" secondItem="d5b-UO-nN2" secondAttribute="centerX" id="wLs-RJ-5lc"/>
+                            <constraint firstItem="6mB-2O-VS2" firstAttribute="leading" secondItem="PAd-yO-PDl" secondAttribute="leading" constant="10" id="y17-aI-CZC"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="PAd-yO-PDl"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="profile" id="vh5-hv-zva"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kxT-4J-xok" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="977" y="717"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="dED-4V-bnA">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="pZc-8o-UAh" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="I6K-IG-qTo">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="lOk-34-fsC" kind="relationship" relationship="viewControllers" id="Pkj-zz-uSo"/>
+                        <segue destination="SeY-sq-78g" kind="relationship" relationship="viewControllers" id="vsr-UJ-8ON"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Cvq-tJ-cnB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-738" y="752"/>
         </scene>
     </scenes>
 </document>
