--- a/reSOUND/Views/Base.lproj/Main.storyboard
+++ b/reSOUND/Views/Base.lproj/Main.storyboard
@@ -238,57 +238,90 @@
                                 <rect key="frame" x="87" y="66" width="200" height="200"/>
                                 <color key="backgroundColor" red="0.99953407049999998" green="0.98835557699999999" blue="0.47265523669999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fl0-Nj-qZo">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="enter name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="miJ-5L-GG5">
                                 <rect key="frame" x="10" y="309" width="355" height="48"/>
                                 <color key="backgroundColor" red="1" green="0.57810515169999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="48" id="vIS-u0-D9I"/>
+                                </constraints>
                                 <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="province" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6mB-2O-VS2">
+                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="enter city" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RFn-p3-Lji">
+                                <rect key="frame" x="10" y="365" width="355" height="32"/>
+                                <color key="backgroundColor" red="0.50176305509999997" green="1" blue="0.90546609840000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="32" id="0W3-Mk-lVM"/>
+                                </constraints>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="enter province" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XxO-Yd-GiT">
                                 <rect key="frame" x="10" y="405" width="355" height="32"/>
                                 <color key="backgroundColor" red="0.46202266219999999" green="0.83828371759999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="32" id="6ud-QQ-mrZ"/>
+                                </constraints>
                                 <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="skills" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WBM-ET-oi4">
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="enter skills" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2O6-J8-iN0">
                                 <rect key="frame" x="10" y="445" width="355" height="32"/>
                                 <color key="backgroundColor" red="0.79410063099999995" green="0.63050212120000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="32" id="GAf-9z-v3F"/>
+                                </constraints>
                                 <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="city" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a2w-e3-7AK">
-                                <rect key="frame" x="10" y="365" width="355" height="32"/>
-                                <color key="backgroundColor" red="0.45085787770000002" green="0.98829740290000001" blue="0.83763033149999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="enter email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="asg-ia-2ig">
+                                <rect key="frame" x="10" y="485" width="355" height="32"/>
+                                <color key="backgroundColor" red="0.4033689754" green="1" blue="0.70044282099999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="32" id="pER-m3-qFH"/>
+                                </constraints>
                                 <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="RFn-p3-Lji" firstAttribute="top" secondItem="miJ-5L-GG5" secondAttribute="bottom" constant="8" id="270-jI-cTj"/>
                             <constraint firstAttribute="bottom" secondItem="cJV-ke-SZV" secondAttribute="bottom" constant="401" id="4mS-ML-tkG"/>
-                            <constraint firstItem="WBM-ET-oi4" firstAttribute="leading" secondItem="PAd-yO-PDl" secondAttribute="leading" constant="10" id="7SD-58-vyg"/>
+                            <constraint firstItem="2O6-J8-iN0" firstAttribute="top" secondItem="XxO-Yd-GiT" secondAttribute="bottom" constant="8" id="4yk-jI-yza"/>
+                            <constraint firstItem="asg-ia-2ig" firstAttribute="leading" secondItem="PAd-yO-PDl" secondAttribute="leading" constant="10" id="526-O0-ZjK"/>
+                            <constraint firstItem="RFn-p3-Lji" firstAttribute="leading" secondItem="PAd-yO-PDl" secondAttribute="leading" constant="10" id="6II-Zw-Mmo"/>
                             <constraint firstItem="cJV-ke-SZV" firstAttribute="top" secondItem="PAd-yO-PDl" secondAttribute="top" constant="46" id="FyM-Yz-nR3"/>
-                            <constraint firstAttribute="trailing" secondItem="fl0-Nj-qZo" secondAttribute="trailing" constant="10" id="MzH-8d-TLA"/>
-                            <constraint firstItem="a2w-e3-7AK" firstAttribute="leading" secondItem="PAd-yO-PDl" secondAttribute="leading" constant="10" id="QG5-dP-b6Q"/>
-                            <constraint firstItem="fl0-Nj-qZo" firstAttribute="top" secondItem="cJV-ke-SZV" secondAttribute="bottom" constant="43" id="U4M-3z-G0f"/>
-                            <constraint firstItem="WBM-ET-oi4" firstAttribute="top" secondItem="6mB-2O-VS2" secondAttribute="bottom" constant="8" id="ZeG-Z2-mmR"/>
-                            <constraint firstItem="PAd-yO-PDl" firstAttribute="trailing" secondItem="6mB-2O-VS2" secondAttribute="trailing" constant="10" id="bBi-z2-9Co"/>
-                            <constraint firstItem="a2w-e3-7AK" firstAttribute="top" secondItem="fl0-Nj-qZo" secondAttribute="bottom" constant="8" id="cqF-Tl-ifS"/>
-                            <constraint firstItem="6mB-2O-VS2" firstAttribute="top" secondItem="a2w-e3-7AK" secondAttribute="bottom" constant="8" id="fpm-Df-XZG"/>
+                            <constraint firstItem="miJ-5L-GG5" firstAttribute="leading" secondItem="PAd-yO-PDl" secondAttribute="leading" constant="10" id="Icl-aI-ylU"/>
+                            <constraint firstItem="2O6-J8-iN0" firstAttribute="leading" secondItem="PAd-yO-PDl" secondAttribute="leading" constant="10" id="KYo-24-TkE"/>
+                            <constraint firstItem="PAd-yO-PDl" firstAttribute="trailing" secondItem="asg-ia-2ig" secondAttribute="trailing" constant="10" id="OWl-gm-D1V"/>
+                            <constraint firstItem="PAd-yO-PDl" firstAttribute="trailing" secondItem="miJ-5L-GG5" secondAttribute="trailing" constant="10" id="VI5-bU-Xy0"/>
+                            <constraint firstItem="XxO-Yd-GiT" firstAttribute="top" secondItem="RFn-p3-Lji" secondAttribute="bottom" constant="8" id="Wcm-0e-cBU"/>
+                            <constraint firstItem="PAd-yO-PDl" firstAttribute="trailing" secondItem="XxO-Yd-GiT" secondAttribute="trailing" constant="10" id="cbs-96-z3s"/>
                             <constraint firstItem="PAd-yO-PDl" firstAttribute="trailing" secondItem="cJV-ke-SZV" secondAttribute="trailing" constant="88" id="jrh-l3-XBc"/>
-                            <constraint firstItem="fl0-Nj-qZo" firstAttribute="leading" secondItem="PAd-yO-PDl" secondAttribute="leading" constant="10" id="jt5-ao-Vge"/>
-                            <constraint firstItem="PAd-yO-PDl" firstAttribute="trailing" secondItem="WBM-ET-oi4" secondAttribute="trailing" constant="10" id="opJ-o6-g2p"/>
+                            <constraint firstItem="PAd-yO-PDl" firstAttribute="trailing" secondItem="RFn-p3-Lji" secondAttribute="trailing" constant="10" id="kth-fi-a4v"/>
+                            <constraint firstItem="PAd-yO-PDl" firstAttribute="trailing" secondItem="2O6-J8-iN0" secondAttribute="trailing" constant="10" id="rRQ-A6-UJd"/>
                             <constraint firstItem="cJV-ke-SZV" firstAttribute="leading" secondItem="PAd-yO-PDl" secondAttribute="leading" constant="87" id="rnm-L1-5Lk"/>
-                            <constraint firstItem="a2w-e3-7AK" firstAttribute="centerX" secondItem="d5b-UO-nN2" secondAttribute="centerX" id="wLs-RJ-5lc"/>
-                            <constraint firstItem="6mB-2O-VS2" firstAttribute="leading" secondItem="PAd-yO-PDl" secondAttribute="leading" constant="10" id="y17-aI-CZC"/>
+                            <constraint firstItem="XxO-Yd-GiT" firstAttribute="leading" secondItem="PAd-yO-PDl" secondAttribute="leading" constant="10" id="w2l-ni-Qpa"/>
+                            <constraint firstItem="miJ-5L-GG5" firstAttribute="top" secondItem="cJV-ke-SZV" secondAttribute="bottom" constant="43" id="xYM-Zg-Q9h"/>
+                            <constraint firstItem="asg-ia-2ig" firstAttribute="top" secondItem="2O6-J8-iN0" secondAttribute="bottom" constant="8" id="yqF-NZ-Jir"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="PAd-yO-PDl"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="profile" id="vh5-hv-zva"/>
+                    <connections>
+                        <outlet property="cityTextField" destination="RFn-p3-Lji" id="T33-cX-XW0"/>
+                        <outlet property="emailTextField" destination="asg-ia-2ig" id="ep9-pD-Wjh"/>
+                        <outlet property="nameTextField" destination="miJ-5L-GG5" id="jAU-tD-30W"/>
+                        <outlet property="profileView" destination="cJV-ke-SZV" id="pe2-aw-tJi"/>
+                        <outlet property="provinceTextField" destination="XxO-Yd-GiT" id="qZH-BQ-oEi"/>
+                        <outlet property="skillsTextField" destination="2O6-J8-iN0" id="ac7-VJ-srB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kxT-4J-xok" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
